Fix header icon alignment in buttons

--- a/src/Header.css
+++ b/src/Header.css
@@ -35,12 +35,18 @@
 
 .container button {
   background-color: floralwhite;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   border: none;
   margin: 0 32px;
+  padding: 0;
+  line-height: 0;
   cursor: pointer;
 }
 
 .container button svg {
+  display: block;
   height: 32px;
   width: 32px;
 }
